Split program into functions.

--- a/PB173/PB173/PB173 - First.vcxproj.filters
+++ b/PB173/PB173/PB173 - First.vcxproj.filters
@@ -42,5 +42,16 @@
     <ClCompile Include="timing.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="testing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="crypto.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="crypto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
