--- a/PB173/PB173/PB173 - First.vcxproj
+++ b/PB173/PB173/PB173 - First.vcxproj
@@ -149,12 +149,17 @@
     <ClCompile Include="aes.c" />
     <ClCompile Include="aesni.c" />
     <ClCompile Include="base64.c" />
+    <ClCompile Include="crypto.cpp" />
     <ClCompile Include="ctr_drbg.c" />
     <ClCompile Include="entropy.c" />
     <ClCompile Include="entropy_poll.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sha512.c" />
+    <ClCompile Include="testing.cpp" />
     <ClCompile Include="timing.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="crypto.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
